data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1303.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\9c\80\80\80\00\01\03\65\6e\76\14\6e\65"
    "\73\74\65\64\5f\66\75\6e\63\5f\69\6d\70\6f\72\74"
    "\65\64\00\00\03\82\80\80\80\00\01\00\0a\93\80\80"
    "\80\00\01\8d\80\80\80\00\00\02\40\02\40\10\00\0c"
    "\01\0b\01\0b\0b"
  )
""
)